# hpx_fft

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  buran_bench_dist.sh  buran_benchmark.sh  compile.sh  distributed_benchmark.sh  epyc1_benchmark.sh  epyc2_benchmark.sh  gasnet_benchmark.sh  generate_plots.sh  holder  medusa_benchmark.sh  message_benchmark.sh  run_hpx_shared.sh  shared_benchmark.sh  shared_benchmark_cores.sh  shared_benchmark_data.sh  shared_benchmark_sven.sh
benchmark/: run_fftw_dist.sh  run_fftw_message.sh  run_fftw_shared.sh  run_fftw_shared_node.sh  run_hpx_dist.sh  run_hpx_message.sh  run_hpx_shared.sh  run_hpx_shared_node.sh
benchmark_scripts/: run_fftw_message.sh  run_hpx_dist.sh  run_hpx_message.sh
fftw_installations/: install_fftw_cmake.sh  install_fftw_sequential.sh  install_fftw_threads_mpi.sh
hpx_installations/: install_hpx_gasnet.sh  install_hpx_lci.sh  install_hpx_mpi.sh  install_hpx_shmem.sh  install_hpx_tcp.sh
installation_scripts/: install_fftw_seq.sh  install_fftw_threads_mpi.sh  install_hpx_lci.sh  install_hpx_mpi.sh  install_hpx_tcp.sh
plot/: holder  plot.py  plot_1024.py  plot_16384.py  plot_512.py  plot_buran.py  plot_buran_50.py  plot_buran_parcelports.py  plot_buran_ss.py  plot_buran_ws.py  plot_clusters.py  plot_fugaku.py  plot_general.py  plot_medusa_ss.py  plot_planning.py  plot_sven.py
plot/data/: plan_times_patient.txt  weak_runtimes_hpx_loop_all_to_all.txt
plot/data/parcelport/message_buran/: message_fftw.txt  message_lci.txt  message_mpi.txt  message_tcp.txt
plot/data/parcelport/message_medusa/: message_lci.txt  message_mpi.txt  message_tcp.txt
plot/data/parcelport/strong_scaling_buran/: all_to_all_lci.txt  all_to_all_mpi.txt  all_to_all_tcp.txt  fftw_reference.txt  scatter_lci.txt  scatter_mpi.txt  scatter_tcp.txt
plot/data/parcelport/strong_scaling_medusa/: all_to_all_lci.txt  all_to_all_mpi.txt  all_to_all_tcp.txt  fftw_reference.txt  scatter_lci.txt  scatter_mpi.txt  scatter_tcp.txt
plot/data/plan/: plan_times_estimate.txt  runtimes_estimate.txt  runtimes_patient.txt
plot/data/strong_scaling/: strong_runtimes_fftw_mpi.txt  strong_runtimes_fftw_omp.txt  strong_runtimes_hpx_loop_all_to_all.txt  strong_runtimes_hpx_loop_scatter.txt  strong_runtimes_hpx_loop_shared_opt.txt  strong_runtimes_hpx_task_agas_shared.txt  strong_runtimes_hpx_task_all_to_all.txt  strong_runtimes_hpx_task_scatter.txt  strong_runtimes_hpx_task_shared.txt  strong_runtimes_hpx_task_sync_shared.txt
plot/data/strong_scaling/1024/: strong_runtimes_fftw_mpi.txt  strong_runtimes_fftw_omp.txt  strong_runtimes_hpx_loop_scatter.txt  strong_runtimes_hpx_loop_shared.txt  strong_runtimes_hpx_task_agas_shared.txt  strong_runtimes_hpx_task_naive_shared.txt  strong_runtimes_hpx_task_scatter.txt  strong_runtimes_hpx_task_shared.txt  strong_runtimes_hpx_task_sync_shared.txt
plot/data/strong_scaling/16384/: strong_runtimes_fftw_hpx copy.txt  strong_runtimes_fftw_hpx.txt  strong_runtimes_fftw_hpx_measure copy.txt  strong_runtimes_fftw_hpx_measure.txt  strong_runtimes_fftw_mpi.txt  strong_runtimes_fftw_mpi_measure.txt  strong_runtimes_fftw_omp.txt  strong_runtimes_fftw_omp_measure.txt  strong_runtimes_fftw_threads.txt  strong_runtimes_fftw_threads_measure.txt  strong_runtimes_hpx_future_agas_shared.txt  strong_runtimes_hpx_future_naive_shared.txt  strong_runtimes_hpx_future_scatter.txt  strong_runtimes_hpx_future_shared.txt  strong_runtimes_hpx_future_sync_shared.txt  (+8 more)
plot/data/weak_scaling/: weak_runtimes_fftw_mpi.txt  weak_runtimes_fftw_omp.txt  weak_runtimes_hpx_loop_shared_opt.txt  weak_runtimes_hpx_task_scatter.txt
plot/old/: plot_base.py  plot_planning.py
plot_env/: pyvenv.cfg
scripts/: run_hpx_shared.sh
src/: all_to_all.cpp  dist_3d.cpp  fft_hpx.cpp  fft_hpx_loop.cpp  fft_hpx_loop_complete.cpp  fft_hpx_loop_shared.cpp  fft_hpx_loop_shared_old.cpp  fft_hpx_task.cpp  fft_hpx_task_agas.cpp  fft_hpx_task_agas_shared.cpp  fft_hpx_task_naive_shared.cpp  fft_hpx_task_shared.cpp  fft_hpx_task_sync_shared.cpp  fft_shared.cpp  fftw_2d.cpp  fftw_3d.cpp  fftw_adapter.h  fftw_hpx.cpp  fftw_mpi.cpp  fftw_mpi_hpx.cpp  fftw_mpi_omp.cpp  fftw_mpi_threads.cpp  fftw_omp.cpp  fftw_threads.cpp  hello.cpp  holder  hpx_fft.cpp  hpx_fft.h  main.cpp  mpi_2d.cpp  par_2d.cpp  par_3d.cpp  scatter.cpp  sender_receiver.cpp  test  test_fftw.cpp  vector_2d.hpp  vector_2d_unique_ptr.hpp  vector_3d.hpp
src/reuse/: fft_hpx_loop_shared_3d.cpp  fft_hpx_task_agas_complete.cpp  fftw_2d.cpp  fftw_mpi_hpx.cpp  fftw_omp.cpp  par_3d.cpp
src/trash/: 1d_stencil_8.cpp  fftw_adapter.cpp  scatter.cpp  sender_receiver.cpp  test.cpp  test_3d_fft.cpp  test_fftw.cpp
(+81 files in other folders)
